--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,16 @@
 <h1> New Article </h1>
+<% if @article.errors.any? %>
+<% @article.errors.full_messages.each do |msg| %>
+    <ul>
+        <li>
+            <%= msg %>
+        </li>
+    </ul>
+<% end %>
+
+<% end %>
+
+
 <%= form_for @article do |f| %>
 <div class="form-field">
     <%= f.label :title %>: <br/>
