--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,28 +1,2 @@
 <h1> New Article </h1>
-<% if @article.errors.any? %>
-<% @article.errors.full_messages.each do |msg| %>
-    <ul>
-        <li>
-            <%= msg %>
-        </li>
-    </ul>
-<% end %>
-
-<% end %>
-
-
-<%= form_for @article do |f| %>
-<div class="form-field">
-    <%= f.label :title %>: <br/>
-    <%= f.text_field :title %>
-</div><br />
-
-<div class="form-field">
-    <%= f.label :description %>: <br/>
-    <%= f.text_area :description %>
-</div><br />
-
-<div class="form-field">
-    <%= f.submit %>
-</div>
-<% end %> 
+<%= render 'form' %>
